test/deprecated/io/iostringformatCheck.good
iostringformatCheck.chpl:1: error: iostringformat is no longer available by default, please insert
a use of the IO module to access it.
