test/deprecated/io/iostringformatCheck.chpl
var x = iostringformat.word;
writeln(x);
